cmake_minimum_required(VERSION 3.19)
project(ProjectPOO)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProjectPOO main.cpp mundo.cpp mundo.h includes.h zonas.cpp zonas.h edificios.cpp edificios.h recursos.cpp recursos.h trabalhadores.cpp trabalhadores.h comandos.cpp comandos.h interface.cpp interface.h)